--- a/CommunityMapTool/CommunityMapTool.csproj
+++ b/CommunityMapTool/CommunityMapTool.csproj
@@ -46,6 +46,18 @@
       <HintPath>lib\BezierCurves.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="DV.OriginShiftInfo">
+      <HintPath>lib\DV.OriginShiftInfo.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="DV.RailTrack">
+      <HintPath>lib\DV.RailTrack.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="DV.Utils">
+      <HintPath>lib\DV.Utils.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
