--- a/CommunityMapLocation/CommunityMapLocation.csproj
+++ b/CommunityMapLocation/CommunityMapLocation.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -54,6 +54,10 @@
       <HintPath>lib\DV.RailTrack.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="DV.Simulation">
+      <HintPath>lib\DV.Simulation.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="DV.UserManagement">
       <HintPath>lib\DV.UserManagement.dll</HintPath>
       <Private>False</Private>
@@ -84,6 +88,10 @@
     </Reference>
     <Reference Include="UnityEngine.InputLegacyModule">
       <HintPath>lib\UnityEngine.InputLegacyModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.PhysicsModule">
+      <HintPath>lib\UnityEngine.PhysicsModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UI">
